--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SRC "src/main.cpp" "src/nesemu.cpp" "src/CPU.cpp" "src/Memory.cpp" "src/PPU.
 set(HEADERS "include/nesemu.hpp" "include/utils.hpp" include/types.h include/CPU.hpp include/PPU.hpp  include/APU.hpp include/Memory.hpp) 
 if(WIN32)
     add_executable(MyNESEmulator ${SRC} ${HEADERS})
-    target_include_directories(MyNESEmulator PRIVATE "include/" "include/sdplog")
+    target_include_directories(MyNESEmulator PRIVATE "include/" "include/sdplog/")
     target_link_libraries(MyNESEmulator PRIVATE ${CMAKE_SOURCE_DIR}/lib/spdlogd.lib)
 else()
     add_executable(MyNESEmulator ${SRC} ${HEADERS})
